[package]
name = "compile-dotenv"
description = "Add environment variables defined in the environment or in a .env file at compile time."
license = "Unlicense"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
quote = "1.0.40"

[lib]
proc-macro = true

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
absolute_paths = "warn"
allow_attributes = "warn"
min_ident_chars = "warn"
non_ascii_idents = "warn"
renamed_function_params = "warn"
semicolon_if_nothing_returned = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
use_self = "warn"

[lints.rust]
missing_docs = "warn"

[lints.rustdoc]
missing_crate_level_docs = "warn"
private_doc_tests = "warn"
unescaped_backticks = "warn"
